docs-archive/apache-airflow-providers-common-messaging/2.1.0/_sources/_api/airflow/providers/common/messaging/triggers/msg_queue/index.rst.txt
airflow.providers.common.messaging.triggers.msg_queue
=====================================================

.. py:module:: airflow.providers.common.messaging.triggers.msg_queue


Attributes
----------

.. autoapisummary::

   airflow.providers.common.messaging.triggers.msg_queue.providers_manager
   airflow.providers.common.messaging.triggers.msg_queue.MESSAGE_QUEUE_PROVIDERS


Classes
-------

.. autoapisummary::

   airflow.providers.common.messaging.triggers.msg_queue.MessageQueueTrigger


Functions
---------

.. autoapisummary::

   airflow.providers.common.messaging.triggers.msg_queue.create_class_by_name


Module Contents
---------------

.. py:data:: providers_manager

.. py:function:: create_class_by_name(name)

.. py:data:: MESSAGE_QUEUE_PROVIDERS

.. py:class:: MessageQueueTrigger(*, queue = None, scheme = None, trigger_queue = None, **kwargs)

   Bases: :py:obj:`airflow.triggers.base.BaseEventTrigger`


   ``MessageQueueTrigger`` serves as a unified trigger for monitoring message queues from different providers.

   It abstracts away provider-specific details, allowing users to monitor a queue with a single trigger,
   regardless of the underlying provider.

   This makes it easy to switch providers without modifying the trigger.

   :param scheme: The queue scheme (e.g., 'kafka', 'redis+pubsub', 'sqs'). Used for provider matching.
   :param queue: **Deprecated** The queue identifier (URI format). If provided, this takes precedence over scheme parameter.
       This parameter is deprecated and will be removed in future versions. Use the 'scheme' parameter instead.
   :param trigger_queue: Assign this trigger to a specific trigger queue (see
       :ref:`config:triggerer__queues_enabled` and the ``--queues`` option of ``airflow triggerer``).
       Named differently from the ``queue`` parameter above, which is the deprecated broker queue URI
       and cannot be repurposed for triggerer routing without breaking existing callers.

   .. seealso::
       For more information on how to use this trigger, take a look at the guide:
       :ref:`howto/trigger:MessageQueueTrigger`


   .. py:attribute:: queue_uri
      :type:  str | None
      :value: None



   .. py:attribute:: scheme
      :type:  str | None
      :value: None



   .. py:attribute:: kwargs


   .. py:property:: queue
      :type: str | None



   .. py:property:: trigger
      :type: airflow.triggers.base.BaseEventTrigger



   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



